test/asm_com/dollar0.err
Error: dollar0.asm: 8: label already defined: $:
$   dw  0
    ^
Errors: 1
